--- a/contact.html
+++ b/contact.html
@@ -21,7 +21,7 @@
     <p>ტელეფონი: +995 599 123 456</p>
     <p>ელ.ფოსტა: info@codeacademy.ge</p>
     <p>მისამართი: თბილისი, ვაჟა-ფშაველას გამზირი 5</p>
-    <img src="img/location.jpg" alt="კომპანიის მდებარეობა" />
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2977.6591732815345!2d44.76350947655584!3d41.72787287480595!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x404472e0a1cfbfcb%3A0x84f6a440c2612327!2zNSDhg5Xhg5Dhg5_hg5At4YOk4YOo4YOQ4YOV4YOU4YOa4YOQ4YOhIOGDkuGDkOGDm-GDluGDmOGDoOGDmCwgVCdiaWxpc2k!5e0!3m2!1sen!2sge!4v1750342671811!5m2!1sen!2sge" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
   </main>
 
 </body>
